--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="manifest.json">
-    <title>Jahresfortschritt</title>
+    <title>Year Progress</title>
     <script src="moment.js"></script>
     <script src="main.js"></script>
     <link rel="stylesheet" href="style.css">
     <script>navigator.serviceWorker.register("sw.js");</script>
   </head>
   <body>
+    <span id="title">Year Progress</span>
     <span id="text">Kein Javascript?</span>
     <div id="processbar">
       <div id="processbarinner"></div>
+    </div>
+    <div id="switchcontainer">
+      <span id="switchestitle">Switch Mode</span>
+      <div id="switchcontainerinner"></div>
     </div>
   </body>
 </html>
