--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
   </head>
   <body>
     <span id="title">Year Progress</span>
-    <span id="text">Kein Javascript?</span>
     <div id="processbar">
       <div id="processbarinner"></div>
     </div>
+    <span id="text">Kein Javascript?</span>
     <div id="switchcontainer">
-      <span id="switchestitle">Switch Mode</span>
-      <div id="switchcontainerinner"></div>
+      <select id="modeselect"></select>
     </div>
   </body>
 </html>
